--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1> Odin Recipes </h1>
 
+    <ul>
+   
+    <li> <a href="recipes/lasagna.html"> Lasagna </a> </li>
+    <li> <a href="recipes/friedchicken.html"> Fried Chicken </a> </li>
+    <li> <a href="recipes/coldcoffee.html">Cold Coffee</a></li>
+    </ul>    
 
 </body>
 
